New Crowdin updates (#73)
* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (German)

* New translations strings.xml (German)

* New translations strings.xml (Russian)

* New translations strings.xml (Russian)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (German)

* New translations strings.xml (Russian)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Romanian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Arabic)

* New translations strings.xml (Catalan)

* New translations strings.xml (Czech)

* New translations strings.xml (Danish)

* New translations strings.xml (Greek)

* New translations strings.xml (Finnish)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Hungarian)

* New translations strings.xml (Italian)

* New translations strings.xml (Japanese)

* New translations strings.xml (Korean)

* New translations strings.xml (Dutch)

* New translations strings.xml (Norwegian)

* New translations strings.xml (Polish)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Serbian (Cyrillic))

* New translations strings.xml (Swedish)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (English)

* New translations strings.xml (Galician)

* New translations strings.xml (Odia)

* New translations strings.xml (Russian)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Italian)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (German)


--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -12,7 +12,7 @@
     <string name="filter_nameAZ">Por nombre (A-Z)</string>
     <string name="filter_nameZA">Por nombre (Z-A)</string>
     <string name="filter_old">Antiguo</string>
-    <string name="selected_s">Selección: %s</string>
+    <string name="selected_s">Seleccionado %s</string>
     <string name="trash">Papelera</string>
     <string name="pause_video">Pausar vídeo</string>
     <string name="play_video">Reproducir vídeo</string>
@@ -53,7 +53,7 @@
     <string name="settings_about_app_summary">Versión %s</string>
     <string name="move_album_to_trash">Mover álbum a la papelera</string>
     <string name="pinned_albums_title">Álbumes fijados</string>
-    <string name="unpin">Desfijar</string>
+    <string name="unpin">No fijar</string>
     <string name="pin">Fijar</string>
     <string name="nav_timeline">Cronología</string>
     <string name="location">Ubicación</string>
@@ -63,40 +63,49 @@
     <string name="app_dev_name">IacobIonut01</string>
     <string name="donate">Donar</string>
     <string name="github">Github</string>
-    <string name="donate_button_cd">Botón de donar</string>
-    <string name="github_button_cd">Botón de Github</string>
+    <string name="donate_button_cd">Botón para donar</string>
+    <string name="github_button_cd">Botón hacia GitHub</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
     <string name="settings_cache">Caché</string>
-    <string name="settings_disk_cache_title">Tamaño de la caché de disco</string>
+    <string name="settings_disk_cache_title">Tamaño de la caché en el disco</string>
     <string name="settings_cached_screen_title">Recuento de pantallas en caché</string>
     <string name="settings_cached_screen_summary">Cuántas pantallas de medios se almacenan en la memoria</string>
     <string name="settings_disk_cache_summary">Cuánto espacio de almacenamiento puede utilizarse para la caché persistente</string>
-    <string name="use_as">Use as</string>
-    <string name="set_as">"Set as: "</string>
-    <string name="delete_dialog_title">You\'re about to delete %s items</string>
-    <string name="delete_dialog_title_confirmation">Deleting %s items..</string>
-    <string name="action_cancel">Cancel</string>
-    <string name="action_confirm">Confirm</string>
-    <string name="action_confirmed">Confirmed</string>
-    <string name="restore_dialog_title">You\'re about to restore %s items</string>
-    <string name="restore_dialog_title_confirmation">Restoring %s items…</string>
-    <string name="trash_dialog_title">You\'re about to trash %s items</string>
-    <string name="trash_dialog_title_confirmation">Moving to trash %s items…</string>
-    <string name="history_delete">Delete item</string>
-    <string name="history_recent_title">Recent</string>
-    <string name="history_suggestions_title">Suggestions</string>
-    <string name="no_media_found">No media found</string>
-    <string name="image_add_description">Add a description</string>
-    <string name="edit_cd">edit</string>
-    <string name="edit_location_cd">Edit location</string>
-    <string name="add_location_cd">Add location</string>
-    <string name="settings_theme_header">Theme</string>
-    <string name="settings_follow_system_theme_title">Follow System Theme</string>
-    <string name="settings_dark_mode_title">Use Dark Mode</string>
-    <string name="selection_dialog_close_cd">Close selection dialog</string>
-    <string name="edit">Edit</string>
-    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
+    <string name="use_as">Usar como</string>
+    <string name="set_as">"Configurar como: "</string>
+    <string name="delete_dialog_title">Estás a punto de borrar %s elementos</string>
+    <string name="delete_dialog_title_confirmation">Borrando %s elementos..</string>
+    <string name="action_cancel">Cancelar</string>
+    <string name="action_confirm">Confirmar</string>
+    <string name="action_confirmed">Confirmado</string>
+    <string name="restore_dialog_title">Estás a punto de restaurar %s elementos</string>
+    <string name="restore_dialog_title_confirmation">Restaurando %s elementos…</string>
+    <string name="trash_dialog_title">Estás a punto de eliminar %s elementos</string>
+    <string name="trash_dialog_title_confirmation">Moviendo a la papelera %s elementos…</string>
+    <string name="history_delete">Borrar elemento</string>
+    <string name="history_recent_title">Reciente</string>
+    <string name="history_suggestions_title">Sugerencias</string>
+    <string name="no_media_found">No se ha encontrado ningún archivo multimedia</string>
+    <string name="image_add_description">Añade una descripción</string>
+    <string name="edit_cd">editar</string>
+    <string name="edit_location_cd">Editar ubicación</string>
+    <string name="add_location_cd">Añadir ubicación</string>
+    <string name="settings_theme_header">Tema</string>
+    <string name="settings_follow_system_theme_title">Seguir Tema del Sistema</string>
+    <string name="settings_dark_mode_title">Usar Modo Oscuro</string>
+    <string name="selection_dialog_close_cd">Cerrar diálogo de selección</string>
+    <string name="edit">Editar</string>
+    <string name="trash_deletion_warning">Fotos y vídeos que elimines serán removidos después de 30 días.</string>
+    <string name="open_with">Abrir con</string>
+    <string name="select">Seleccionar</string>
+    <string name="photos_and_videos">Fotos y Videos</string>
+    <string name="photos">Fotos</string>
+    <string name="videos">Videos</string>
+    <string name="photo">Foto</string>
+    <string name="video">Video</string>
+    <string name="picker_subtitle">Esta aplicación solo puede acceder a las fotos que selecciones</string>
+    <string name="close">Cerrar</string>
     <plurals name="item_count">
         <item quantity="one">%s Ítem</item>
         <item quantity="other">%s Ítems</item>
