--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -72,31 +72,40 @@
     <string name="settings_cached_screen_title">Contagem de tela em cache</string>
     <string name="settings_cached_screen_summary">Quantas telas de mídia estão armazenadas na memória</string>
     <string name="settings_disk_cache_summary">Quanto espaço de armazenamento pode ser usado para cache persistente</string>
-    <string name="use_as">Use as</string>
-    <string name="set_as">"Set as: "</string>
-    <string name="delete_dialog_title">You\'re about to delete %s items</string>
-    <string name="delete_dialog_title_confirmation">Deleting %s items..</string>
-    <string name="action_cancel">Cancel</string>
-    <string name="action_confirm">Confirm</string>
-    <string name="action_confirmed">Confirmed</string>
-    <string name="restore_dialog_title">You\'re about to restore %s items</string>
-    <string name="restore_dialog_title_confirmation">Restoring %s items…</string>
-    <string name="trash_dialog_title">You\'re about to trash %s items</string>
-    <string name="trash_dialog_title_confirmation">Moving to trash %s items…</string>
-    <string name="history_delete">Delete item</string>
-    <string name="history_recent_title">Recent</string>
-    <string name="history_suggestions_title">Suggestions</string>
-    <string name="no_media_found">No media found</string>
-    <string name="image_add_description">Add a description</string>
-    <string name="edit_cd">edit</string>
-    <string name="edit_location_cd">Edit location</string>
-    <string name="add_location_cd">Add location</string>
-    <string name="settings_theme_header">Theme</string>
-    <string name="settings_follow_system_theme_title">Follow System Theme</string>
-    <string name="settings_dark_mode_title">Use Dark Mode</string>
-    <string name="selection_dialog_close_cd">Close selection dialog</string>
-    <string name="edit">Edit</string>
-    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
+    <string name="use_as">Usar como</string>
+    <string name="set_as">"Definir como: "</string>
+    <string name="delete_dialog_title">Você está prestes a apagar %s itens</string>
+    <string name="delete_dialog_title_confirmation">Apagando %s itens..</string>
+    <string name="action_cancel">Cancelar</string>
+    <string name="action_confirm">Confirmar</string>
+    <string name="action_confirmed">Confirmado</string>
+    <string name="restore_dialog_title">Você está prestes a restaurar %s itens</string>
+    <string name="restore_dialog_title_confirmation">Restaurando %s itens…</string>
+    <string name="trash_dialog_title">Você está prestes a mover %s itens para a lixeira</string>
+    <string name="trash_dialog_title_confirmation">Movendo %s itens para a lixeira…</string>
+    <string name="history_delete">Apagar item</string>
+    <string name="history_recent_title">Recente</string>
+    <string name="history_suggestions_title">Sugestões</string>
+    <string name="no_media_found">Nenhuma mídia encontrada</string>
+    <string name="image_add_description">Adicionar uma descrição</string>
+    <string name="edit_cd">editar</string>
+    <string name="edit_location_cd">Editar localização</string>
+    <string name="add_location_cd">Adicionar localização</string>
+    <string name="settings_theme_header">Tema</string>
+    <string name="settings_follow_system_theme_title">Seguir Tema do Sistema</string>
+    <string name="settings_dark_mode_title">Usar Modo Escuro</string>
+    <string name="selection_dialog_close_cd">Fechar diálogo de seleção</string>
+    <string name="edit">Editar</string>
+    <string name="trash_deletion_warning">Fotos e vídeos que forem apagados serão removidos após 30 dias.</string>
+    <string name="open_with">Open with</string>
+    <string name="select">Select</string>
+    <string name="photos_and_videos">Photos and Videos</string>
+    <string name="photos">Photos</string>
+    <string name="videos">Videos</string>
+    <string name="photo">Photo</string>
+    <string name="video">Video</string>
+    <string name="picker_subtitle">This app can only access the photos you select</string>
+    <string name="close">Close</string>
     <plurals name="item_count">
         <item quantity="one">%s ítem</item>
         <item quantity="other">%s ítens</item>
