--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -13,10 +13,10 @@
     <string name="filter_nameZA">Имя (Я-А)</string>
     <string name="filter_old">Старые</string>
     <string name="selected_s">Выбрано %s</string>
-    <string name="trash">Мусор</string>
+    <string name="trash">Корзина</string>
     <string name="pause_video">Поставить на паузу</string>
     <string name="play_video">Воспроизвести</string>
-    <string name="favorites">Любимые</string>
+    <string name="favorites">Избранное</string>
     <string name="no_media_title">Похоже здесь пусто</string>
     <string name="no_media_cd">Медиафайлы отсутствуют</string>
     <string name="empty_trash_title">Чисто как в аптеке</string>
@@ -31,7 +31,7 @@
     <string name="info">Информация</string>
     <string name="remove_selected">Удалить выбранное</string>
     <string name="remove_all">Удалить все</string>
-    <string name="empty_favorites_title">У вас нет любимых</string>
+    <string name="empty_favorites_title">У вас нет избранных файлов</string>
     <string name="label">Ярлык</string>
     <string name="path">Путь</string>
     <string name="date">Дата</string>
@@ -47,15 +47,15 @@
     <string name="settings_title">Параметры</string>
     <string name="reset_settings">Сброс параметров</string>
     <string name="settings_general">Основные</string>
-    <string name="settings_trash_title">Использовать мусорное ведро</string>
-    <string name="settings_trash_summary">Оставит удаленные медиафайлы в памяти на 30 дней.\nВ случае отключения, медиафайлы будут немедленно удалены навсегда.</string>
+    <string name="settings_trash_title">Использовать корзину</string>
+    <string name="settings_trash_summary">Хранит удаленные медиафайлы в памяти на 30 дней.\nВ случае отключения, медиафайлы будут немедленно удалены навсегда.</string>
     <string name="settings_about_app_title">О галерее</string>
     <string name="settings_about_app_summary">Версия %s</string>
     <string name="move_album_to_trash">Отправить альбом в корзину</string>
     <string name="pinned_albums_title">Закрепленные альбомы</string>
     <string name="unpin">Открепить</string>
     <string name="pin">Закрепить</string>
-    <string name="nav_timeline">Временная шкала</string>
+    <string name="nav_timeline">Хронология</string>
     <string name="location">Местоположение</string>
     <string name="location_cd">Местоположение медиафайла</string>
     <string name="location_map_cd">Карта</string>
@@ -72,35 +72,44 @@
     <string name="settings_cached_screen_title">Количество кэшированных экранов</string>
     <string name="settings_cached_screen_summary">Сколько экранов медиа хранится в памяти</string>
     <string name="settings_disk_cache_summary">Сколько места в хранилище может быть использовано для постоянного кэширования</string>
-    <string name="use_as">Use as</string>
-    <string name="set_as">"Set as: "</string>
-    <string name="delete_dialog_title">You\'re about to delete %s items</string>
-    <string name="delete_dialog_title_confirmation">Deleting %s items..</string>
-    <string name="action_cancel">Cancel</string>
-    <string name="action_confirm">Confirm</string>
-    <string name="action_confirmed">Confirmed</string>
-    <string name="restore_dialog_title">You\'re about to restore %s items</string>
-    <string name="restore_dialog_title_confirmation">Restoring %s items…</string>
-    <string name="trash_dialog_title">You\'re about to trash %s items</string>
-    <string name="trash_dialog_title_confirmation">Moving to trash %s items…</string>
-    <string name="history_delete">Delete item</string>
-    <string name="history_recent_title">Recent</string>
-    <string name="history_suggestions_title">Suggestions</string>
-    <string name="no_media_found">No media found</string>
-    <string name="image_add_description">Add a description</string>
-    <string name="edit_cd">edit</string>
-    <string name="edit_location_cd">Edit location</string>
-    <string name="add_location_cd">Add location</string>
-    <string name="settings_theme_header">Theme</string>
-    <string name="settings_follow_system_theme_title">Follow System Theme</string>
-    <string name="settings_dark_mode_title">Use Dark Mode</string>
-    <string name="selection_dialog_close_cd">Close selection dialog</string>
-    <string name="edit">Edit</string>
-    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
+    <string name="use_as">Использовать как</string>
+    <string name="set_as">"Установить как: "</string>
+    <string name="delete_dialog_title">Вы собираетесь удалить %s элементов</string>
+    <string name="delete_dialog_title_confirmation">Удаление %s элементов...</string>
+    <string name="action_cancel">Отмена</string>
+    <string name="action_confirm">Подтвердить</string>
+    <string name="action_confirmed">Подтверждено</string>
+    <string name="restore_dialog_title">Вы собираетесь восстановить %s элементов</string>
+    <string name="restore_dialog_title_confirmation">Восстановление %s элементов…</string>
+    <string name="trash_dialog_title">Вы собираетесь удалить %s элементов</string>
+    <string name="trash_dialog_title_confirmation">Перемещение %s предметов в корзину…</string>
+    <string name="history_delete">Удалить элемент</string>
+    <string name="history_recent_title">Недавние</string>
+    <string name="history_suggestions_title">Предложения</string>
+    <string name="no_media_found">Медиафайлы отсутствуют</string>
+    <string name="image_add_description">Добавить описание</string>
+    <string name="edit_cd">изменить</string>
+    <string name="edit_location_cd">Изменить местоположение</string>
+    <string name="add_location_cd">Добавить местоположение</string>
+    <string name="settings_theme_header">Тема</string>
+    <string name="settings_follow_system_theme_title">Следовать системной теме</string>
+    <string name="settings_dark_mode_title">Использовать Темный Режим</string>
+    <string name="selection_dialog_close_cd">Закрыть окно выбора</string>
+    <string name="edit">Изменить</string>
+    <string name="trash_deletion_warning">Перемещённые Вами в корзину фотографии и видео будут полностью удалены через 30 дней.</string>
+    <string name="open_with">Открыть в</string>
+    <string name="select">Выбрать</string>
+    <string name="photos_and_videos">Фото и Видео</string>
+    <string name="photos">Фото</string>
+    <string name="videos">Видео</string>
+    <string name="photo">Фото</string>
+    <string name="video">Видео</string>
+    <string name="picker_subtitle">Это приложение может получить доступ только к выбранным Вами фотографиям</string>
+    <string name="close">Закрыть</string>
     <plurals name="item_count">
-        <item quantity="one">%sпункт</item>
-        <item quantity="few">%sпунктов</item>
-        <item quantity="many">%sпунктов</item>
-        <item quantity="other">%sпунктов</item>
+        <item quantity="one">%s пункт</item>
+        <item quantity="few">%s пунктов</item>
+        <item quantity="many">%s пунктов</item>
+        <item quantity="other">%s пунктов</item>
     </plurals>
 </resources>
