--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -32,55 +32,55 @@
     <string name="remove_selected">Видалити вибране</string>
     <string name="remove_all">Видалити все</string>
     <string name="empty_favorites_title">Немає обраних</string>
-    <string name="label">Label</string>
-    <string name="path">Path</string>
-    <string name="date">Date</string>
+    <string name="label">Етикетка</string>
+    <string name="path">Шлях</string>
+    <string name="date">Дата</string>
     <string name="iso">" • ISO"</string>
-    <string name="kb">KB</string>
-    <string name="mb">MB</string>
-    <string name="gb">GB</string>
-    <string name="metadata">Metadata</string>
-    <string name="select_all">Select all</string>
+    <string name="kb">КБ</string>
+    <string name="mb">МБ</string>
+    <string name="gb">ГБ</string>
+    <string name="metadata">Метадані</string>
+    <string name="select_all">Вибрати все</string>
     <string name="unselect_all">Unselect all</string>
     <string name="drop_down_cd">Drop down</string>
-    <string name="back_cd">Back</string>
-    <string name="settings_title">Settings</string>
-    <string name="reset_settings">Reset Settings</string>
-    <string name="settings_general">General</string>
-    <string name="settings_trash_title">Use trash can</string>
+    <string name="back_cd">Назад</string>
+    <string name="settings_title">Опції</string>
+    <string name="reset_settings">Скинути опції</string>
+    <string name="settings_general">Загальне</string>
+    <string name="settings_trash_title">Використовувати кошик</string>
     <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
-    <string name="settings_about_app_title">About Gallery</string>
-    <string name="settings_about_app_summary">Version %s</string>
+    <string name="settings_about_app_title">Про Галерею</string>
+    <string name="settings_about_app_summary">Версія %s</string>
     <string name="move_album_to_trash">Move album to trash</string>
-    <string name="pinned_albums_title">Pinned Albums</string>
+    <string name="pinned_albums_title">Закріплені Альбоми</string>
     <string name="unpin">Unpin</string>
     <string name="pin">Pin</string>
-    <string name="nav_timeline">Timeline</string>
-    <string name="location">Location</string>
-    <string name="location_cd">Media Location</string>
+    <string name="nav_timeline">Хронологія</string>
+    <string name="location">Місцезнаходження</string>
+    <string name="location_cd">Локація Медіа</string>
     <string name="location_map_cd">Location Map</string>
     <string name="app_dev">by %s</string>
     <string name="app_dev_name">IacobIonut01</string>
-    <string name="donate">Donate</string>
-    <string name="github">Github</string>
+    <string name="donate">Пожертвувати</string>
+    <string name="github">GitHub</string>
     <string name="donate_button_cd">Donate Button</string>
-    <string name="github_button_cd">Github Button</string>
+    <string name="github_button_cd">Кнопка GitHub</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
-    <string name="settings_cache">Cache</string>
-    <string name="settings_disk_cache_title">Disk cache size</string>
+    <string name="settings_cache">Кеш</string>
+    <string name="settings_disk_cache_title">Розмір кешу</string>
     <string name="settings_cached_screen_title">Cached screen count</string>
     <string name="settings_cached_screen_summary">How many screens of media are stored in the memory</string>
     <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
-    <string name="use_as">Use as</string>
-    <string name="set_as">"Set as: "</string>
-    <string name="delete_dialog_title">You\'re about to delete %s items</string>
+    <string name="use_as">Використовуйте як</string>
+    <string name="set_as">"Встановити як: "</string>
+    <string name="delete_dialog_title">Ви збираєтеся видалити %s елементи</string>
     <string name="delete_dialog_title_confirmation">Deleting %s items..</string>
-    <string name="action_cancel">Cancel</string>
-    <string name="action_confirm">Confirm</string>
-    <string name="action_confirmed">Confirmed</string>
-    <string name="restore_dialog_title">You\'re about to restore %s items</string>
-    <string name="restore_dialog_title_confirmation">Restoring %s items…</string>
+    <string name="action_cancel">Скасувати</string>
+    <string name="action_confirm">Підтвердити</string>
+    <string name="action_confirmed">Підтверджено</string>
+    <string name="restore_dialog_title">Ви збираєтеся відновити %s елементи</string>
+    <string name="restore_dialog_title_confirmation">Відновлення %s елементів…</string>
     <string name="trash_dialog_title">You\'re about to trash %s items</string>
     <string name="trash_dialog_title_confirmation">Moving to trash %s items…</string>
     <string name="history_delete">Delete item</string>
@@ -97,6 +97,15 @@
     <string name="selection_dialog_close_cd">Close selection dialog</string>
     <string name="edit">Edit</string>
     <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
+    <string name="open_with">Open with</string>
+    <string name="select">Select</string>
+    <string name="photos_and_videos">Photos and Videos</string>
+    <string name="photos">Photos</string>
+    <string name="videos">Videos</string>
+    <string name="photo">Photo</string>
+    <string name="video">Video</string>
+    <string name="picker_subtitle">This app can only access the photos you select</string>
+    <string name="close">Close</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="few">%s items</item>
