--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -72,31 +72,40 @@
     <string name="settings_cached_screen_title">快取畫面數量</string>
     <string name="settings_cached_screen_summary">儲存在記憶體中的媒體畫面數量</string>
     <string name="settings_disk_cache_summary">可用於永久快取的儲存空間大小</string>
-    <string name="use_as">Use as</string>
-    <string name="set_as">"Set as: "</string>
-    <string name="delete_dialog_title">You\'re about to delete %s items</string>
-    <string name="delete_dialog_title_confirmation">Deleting %s items..</string>
-    <string name="action_cancel">Cancel</string>
-    <string name="action_confirm">Confirm</string>
-    <string name="action_confirmed">Confirmed</string>
-    <string name="restore_dialog_title">You\'re about to restore %s items</string>
-    <string name="restore_dialog_title_confirmation">Restoring %s items…</string>
-    <string name="trash_dialog_title">You\'re about to trash %s items</string>
-    <string name="trash_dialog_title_confirmation">Moving to trash %s items…</string>
-    <string name="history_delete">Delete item</string>
-    <string name="history_recent_title">Recent</string>
-    <string name="history_suggestions_title">Suggestions</string>
-    <string name="no_media_found">No media found</string>
-    <string name="image_add_description">Add a description</string>
-    <string name="edit_cd">edit</string>
-    <string name="edit_location_cd">Edit location</string>
-    <string name="add_location_cd">Add location</string>
-    <string name="settings_theme_header">Theme</string>
-    <string name="settings_follow_system_theme_title">Follow System Theme</string>
-    <string name="settings_dark_mode_title">Use Dark Mode</string>
-    <string name="selection_dialog_close_cd">Close selection dialog</string>
-    <string name="edit">Edit</string>
-    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
+    <string name="use_as">使用方式</string>
+    <string name="set_as">"設定為： "</string>
+    <string name="delete_dialog_title">您即將刪除 %s 個項目</string>
+    <string name="delete_dialog_title_confirmation">正在刪除 %s 個項目..</string>
+    <string name="action_cancel">取消</string>
+    <string name="action_confirm">確認</string>
+    <string name="action_confirmed">已確認</string>
+    <string name="restore_dialog_title">您即將恢復 %s 項目</string>
+    <string name="restore_dialog_title_confirmation">正在恢復 %s 項目...</string>
+    <string name="trash_dialog_title">您即將移到垃圾桶 %s 項目</string>
+    <string name="trash_dialog_title_confirmation">正在移動 %s 項目到垃圾桶...</string>
+    <string name="history_delete">刪除項目</string>
+    <string name="history_recent_title">最近</string>
+    <string name="history_suggestions_title">建議</string>
+    <string name="no_media_found">未找到媒體</string>
+    <string name="image_add_description">新增描述</string>
+    <string name="edit_cd">編輯</string>
+    <string name="edit_location_cd">編輯位置</string>
+    <string name="add_location_cd">新增位置</string>
+    <string name="settings_theme_header">主題</string>
+    <string name="settings_follow_system_theme_title">跟隨系統主題</string>
+    <string name="settings_dark_mode_title">使用暗黑模式</string>
+    <string name="selection_dialog_close_cd">關閉選擇對話框</string>
+    <string name="edit">編輯</string>
+    <string name="trash_deletion_warning">您刪除的照片和影片將在30天後被刪除。</string>
+    <string name="open_with">開啟方式</string>
+    <string name="select">選擇</string>
+    <string name="photos_and_videos">照片和影片</string>
+    <string name="photos">照片</string>
+    <string name="videos">影片</string>
+    <string name="photo">照片</string>
+    <string name="video">影片</string>
+    <string name="picker_subtitle">這個應用程式只能存取您所選擇的相片</string>
+    <string name="close">關閉</string>
     <plurals name="item_count">
         <item quantity="other">%s 個項目</item>
     </plurals>
