--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -11,7 +11,7 @@
     <string name="filter_recent">Zuletzt</string>
     <string name="filter_nameAZ">Name (A-Z)</string>
     <string name="filter_nameZA">Name (Z-A)</string>
-    <string name="filter_old">Alt</string>
+    <string name="filter_old">Älteste</string>
     <string name="selected_s">%s ausgewählt</string>
     <string name="trash">Papierkorb</string>
     <string name="pause_video">Video anhalten</string>
@@ -25,7 +25,7 @@
     <string name="error_cd">Es ist ein Fehler aufgetreten</string>
     <string name="copy_error">Fehler beim Kopieren</string>
     <string name="trash_restore">Wiederherstellen</string>
-    <string name="trash_empty">Leer</string>
+    <string name="trash_empty">Leeren</string>
     <string name="trash_delete">Löschen</string>
     <string name="share">Teilen</string>
     <string name="info">Info</string>
@@ -84,19 +84,28 @@
     <string name="trash_dialog_title">Sie sind dabei, %s Elemente zu löschen</string>
     <string name="trash_dialog_title_confirmation">Verschiebe %s Elemente in den Papierkorb…</string>
     <string name="history_delete">Element löschen</string>
-    <string name="history_recent_title">Recent</string>
-    <string name="history_suggestions_title">Suggestions</string>
-    <string name="no_media_found">No media found</string>
-    <string name="image_add_description">Add a description</string>
+    <string name="history_recent_title">Zuletzt</string>
+    <string name="history_suggestions_title">Vorschläge</string>
+    <string name="no_media_found">Keine Medien gefunden</string>
+    <string name="image_add_description">Eine Beschreibung hinzufügen</string>
     <string name="edit_cd">bearbeiten</string>
-    <string name="edit_location_cd">Edit location</string>
-    <string name="add_location_cd">Add location</string>
+    <string name="edit_location_cd">Standort bearbeiten</string>
+    <string name="add_location_cd">Standort hinzufügen</string>
     <string name="settings_theme_header">Thema</string>
-    <string name="settings_follow_system_theme_title">Follow System Theme</string>
-    <string name="settings_dark_mode_title">Use Dark Mode</string>
-    <string name="selection_dialog_close_cd">Close selection dialog</string>
+    <string name="settings_follow_system_theme_title">Systemstandard folgen</string>
+    <string name="settings_dark_mode_title">Dunkles Design</string>
+    <string name="selection_dialog_close_cd">Auswahldialog schließen</string>
     <string name="edit">Bearbeiten</string>
     <string name="trash_deletion_warning">Gelöschte Fotos und Videos werden nach 30 Tagen entfernt.</string>
+    <string name="open_with">Open with</string>
+    <string name="select">Select</string>
+    <string name="photos_and_videos">Photos and Videos</string>
+    <string name="photos">Photos</string>
+    <string name="videos">Videos</string>
+    <string name="photo">Photo</string>
+    <string name="video">Video</string>
+    <string name="picker_subtitle">This app can only access the photos you select</string>
+    <string name="close">Close</string>
     <plurals name="item_count">
         <item quantity="one">%s Datei</item>
         <item quantity="other">%s Dateien</item>
