--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -97,6 +97,15 @@
     <string name="selection_dialog_close_cd">Close selection dialog</string>
     <string name="edit">Edit</string>
     <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
+    <string name="open_with">Open with</string>
+    <string name="select">Select</string>
+    <string name="photos_and_videos">Photos and Videos</string>
+    <string name="photos">Photos</string>
+    <string name="videos">Videos</string>
+    <string name="photo">Photo</string>
+    <string name="video">Video</string>
+    <string name="picker_subtitle">This app can only access the photos you select</string>
+    <string name="close">Close</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="two">%s items</item>
