--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -1,103 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gallery</string>
-    <string name="nav_albums">Albums</string>
-    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
-    <string name="share_media">Share</string>
-    <string name="request_permissions">Request permissions</string>
-    <string name="filter">Filter</string>
-    <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
-    <string name="filter_old">Old</string>
-    <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
-    <string name="pause_video">Pause video</string>
-    <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
-    <string name="no_media_title">Seems empty here</string>
-    <string name="no_media_cd">No media found</string>
-    <string name="empty_trash_title">Squeaky Clean</string>
-    <string name="empty_trash_cd">Trash is empty</string>
-    <string name="error_title">Something went wrong :(</string>
-    <string name="error_cd">An error occurred</string>
-    <string name="copy_error">Copy error</string>
-    <string name="trash_restore">Restore</string>
-    <string name="trash_empty">Empty</string>
-    <string name="trash_delete">Delete</string>
-    <string name="share">Share</string>
-    <string name="info">Info</string>
-    <string name="remove_selected">Remove selected</string>
-    <string name="remove_all">Remove all</string>
-    <string name="empty_favorites_title">You have no favorites</string>
-    <string name="label">Label</string>
-    <string name="path">Path</string>
-    <string name="date">Date</string>
+    <string name="app_name">Bộ sưu tập</string>
+    <string name="nav_albums">Album</string>
+    <string name="searchbar_title"><![CDATA[Tìm ảnh & video]]></string>
+    <string name="header_today">Hôm nay</string>
+    <string name="header_yesterday">Hôm qua</string>
+    <string name="share_media">Chia sẻ</string>
+    <string name="request_permissions">Cấp quyền</string>
+    <string name="filter">Lọc</string>
+    <string name="filter_recent">Gần đây</string>
+    <string name="filter_nameAZ">Tên (A-Z)</string>
+    <string name="filter_nameZA">Tên (Z-A)</string>
+    <string name="filter_old">Cũ</string>
+    <string name="selected_s">Đã chọn %s</string>
+    <string name="trash">Thùng rác</string>
+    <string name="pause_video">Tạm dừng video</string>
+    <string name="play_video">Bắt đầu video</string>
+    <string name="favorites">Yêu thích</string>
+    <string name="no_media_title">Ở đây không có gì cả</string>
+    <string name="no_media_cd">Không tìm thấy tệp nào</string>
+    <string name="empty_trash_title">Sạch sẽ</string>
+    <string name="empty_trash_cd">Thùng rác rỗng</string>
+    <string name="error_title">Có gì đó sai sai :(</string>
+    <string name="error_cd">Đã xảy ra lỗi</string>
+    <string name="copy_error">Sao chép lỗi</string>
+    <string name="trash_restore">Khôi phục</string>
+    <string name="trash_empty">Xóa tất cả</string>
+    <string name="trash_delete">Xóa</string>
+    <string name="share">Chia sẻ</string>
+    <string name="info">Thông tin</string>
+    <string name="remove_selected">Xóa mục đã chọn</string>
+    <string name="remove_all">Xóa tất cả</string>
+    <string name="empty_favorites_title">Bạn không có mục yêu thích nào</string>
+    <string name="label">Tên</string>
+    <string name="path">Đường dẫn</string>
+    <string name="date">Ngày</string>
     <string name="iso">" • ISO"</string>
     <string name="kb">KB</string>
     <string name="mb">MB</string>
     <string name="gb">GB</string>
     <string name="metadata">Metadata</string>
-    <string name="select_all">Select all</string>
-    <string name="unselect_all">Unselect all</string>
-    <string name="drop_down_cd">Drop down</string>
-    <string name="back_cd">Back</string>
-    <string name="settings_title">Settings</string>
-    <string name="reset_settings">Reset Settings</string>
-    <string name="settings_general">General</string>
-    <string name="settings_trash_title">Use trash can</string>
-    <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
-    <string name="settings_about_app_title">About Gallery</string>
-    <string name="settings_about_app_summary">Version %s</string>
-    <string name="move_album_to_trash">Move album to trash</string>
-    <string name="pinned_albums_title">Pinned Albums</string>
-    <string name="unpin">Unpin</string>
-    <string name="pin">Pin</string>
-    <string name="nav_timeline">Timeline</string>
-    <string name="location">Location</string>
-    <string name="location_cd">Media Location</string>
-    <string name="location_map_cd">Location Map</string>
-    <string name="app_dev">by %s</string>
+    <string name="select_all">Chọn tất cả</string>
+    <string name="unselect_all">Bỏ chọn tất cả</string>
+    <string name="drop_down_cd">Thả xuống</string>
+    <string name="back_cd">Quay lại</string>
+    <string name="settings_title">Cài đặt</string>
+    <string name="reset_settings">Đặt lại cài đặt</string>
+    <string name="settings_general">Chung</string>
+    <string name="settings_trash_title">Sử dụng thùng rác</string>
+    <string name="settings_trash_summary">Lưu lại tệp đã xóa trong 30 ngày.\nSẽ xóa hoàn toàn tệp nếu tính năng này bị tắt.</string>
+    <string name="settings_about_app_title">Về Bộ sưu tập</string>
+    <string name="settings_about_app_summary">Phiên bản %s</string>
+    <string name="move_album_to_trash">Chuyển album vào thùng rác</string>
+    <string name="pinned_albums_title">Album đã ghim</string>
+    <string name="unpin">Bỏ ghim</string>
+    <string name="pin">Ghim</string>
+    <string name="nav_timeline">Dòng thời gian</string>
+    <string name="location">Vị trí</string>
+    <string name="location_cd">Vị trí tệp</string>
+    <string name="location_map_cd">Bản đồ vị trí</string>
+    <string name="app_dev">được làm bởi %s</string>
     <string name="app_dev_name">IacobIonut01</string>
-    <string name="donate">Donate</string>
+    <string name="donate">Ủng hộ</string>
     <string name="github">Github</string>
-    <string name="donate_button_cd">Donate Button</string>
-    <string name="github_button_cd">Github Button</string>
+    <string name="donate_button_cd">Nút ủng hộ</string>
+    <string name="github_button_cd">Nút Github</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
-    <string name="settings_cache">Cache</string>
-    <string name="settings_disk_cache_title">Disk cache size</string>
-    <string name="settings_cached_screen_title">Cached screen count</string>
-    <string name="settings_cached_screen_summary">How many screens of media are stored in the memory</string>
-    <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
-    <string name="use_as">Use as</string>
-    <string name="set_as">"Set as: "</string>
-    <string name="delete_dialog_title">You\'re about to delete %s items</string>
-    <string name="delete_dialog_title_confirmation">Deleting %s items..</string>
-    <string name="action_cancel">Cancel</string>
-    <string name="action_confirm">Confirm</string>
-    <string name="action_confirmed">Confirmed</string>
-    <string name="restore_dialog_title">You\'re about to restore %s items</string>
-    <string name="restore_dialog_title_confirmation">Restoring %s items…</string>
-    <string name="trash_dialog_title">You\'re about to trash %s items</string>
-    <string name="trash_dialog_title_confirmation">Moving to trash %s items…</string>
-    <string name="history_delete">Delete item</string>
-    <string name="history_recent_title">Recent</string>
-    <string name="history_suggestions_title">Suggestions</string>
-    <string name="no_media_found">No media found</string>
-    <string name="image_add_description">Add a description</string>
-    <string name="edit_cd">edit</string>
-    <string name="edit_location_cd">Edit location</string>
-    <string name="add_location_cd">Add location</string>
-    <string name="settings_theme_header">Theme</string>
-    <string name="settings_follow_system_theme_title">Follow System Theme</string>
-    <string name="settings_dark_mode_title">Use Dark Mode</string>
-    <string name="selection_dialog_close_cd">Close selection dialog</string>
-    <string name="edit">Edit</string>
-    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
+    <string name="settings_cache">Bộ nhớ đệm</string>
+    <string name="settings_disk_cache_title">Dung lượng bộ nhớ đệm</string>
+    <string name="settings_cached_screen_title">Số khung hình lưu trong bộ đệm</string>
+    <string name="settings_cached_screen_summary">Số khung hình được lưu trong bộ nhớ</string>
+    <string name="settings_disk_cache_summary">Dung lượng tối đa có thể dùng để lưu trong bộ đệm một cách lâu dài</string>
+    <string name="use_as">Dùng làm</string>
+    <string name="set_as">"Đặt làm: "</string>
+    <string name="delete_dialog_title">Bạn chuẩn bị xóa %s mục</string>
+    <string name="delete_dialog_title_confirmation">Đang xóa %s mục..</string>
+    <string name="action_cancel">Hủy</string>
+    <string name="action_confirm">Xác nhận</string>
+    <string name="action_confirmed">Đã xác nhận</string>
+    <string name="restore_dialog_title">Bạn chuẩn bị khôi phục %s mục</string>
+    <string name="restore_dialog_title_confirmation">Đang khôi phục %s mục…</string>
+    <string name="trash_dialog_title">Bạn chuẩn bị chuyển %s vào thùng rác</string>
+    <string name="trash_dialog_title_confirmation">Đang chuyển %s mục vào thùng rác…</string>
+    <string name="history_delete">Xóa mục</string>
+    <string name="history_recent_title">Gần đây</string>
+    <string name="history_suggestions_title">Đề xuất</string>
+    <string name="no_media_found">Không tìm thấy tệp nào</string>
+    <string name="image_add_description">Thêm miêu tả</string>
+    <string name="edit_cd">sửa</string>
+    <string name="edit_location_cd">Sửa vị trí</string>
+    <string name="add_location_cd">Thêm vị trí</string>
+    <string name="settings_theme_header">Chủ đề</string>
+    <string name="settings_follow_system_theme_title">Theo chủ đề của hệ thống</string>
+    <string name="settings_dark_mode_title">Dùng chế độ tối</string>
+    <string name="selection_dialog_close_cd">Thoát hộp thoại chọn</string>
+    <string name="edit">Sửa</string>
+    <string name="trash_deletion_warning">Ảnh và video bạn đã xóa sẽ bị xóa hoàn toàn sau 30 ngày.</string>
+    <string name="open_with">Open with</string>
+    <string name="select">Select</string>
+    <string name="photos_and_videos">Photos and Videos</string>
+    <string name="photos">Photos</string>
+    <string name="videos">Videos</string>
+    <string name="photo">Photo</string>
+    <string name="video">Video</string>
+    <string name="picker_subtitle">This app can only access the photos you select</string>
+    <string name="close">Close</string>
     <plurals name="item_count">
-        <item quantity="other">%s items</item>
+        <item quantity="other">%s mục</item>
     </plurals>
 </resources>
