Gallery: Add Secure Mode Setting
Enable by default secure mode (hide app content when you exit it)
Add toggle for the option

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,6 +111,8 @@
     <string name="skip">Skip</string>
     <string name="allow">Allow</string>
     <string name="all">All</string>
+    <string name="secure_mode_title">Secure Mode</string>
+    <string name="secure_mode_summary">Hide the app preview when you exit it</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
