New Crowdin updates (#104)
* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (German)

* New translations strings.xml (Russian)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Romanian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Arabic)

* New translations strings.xml (Catalan)

* New translations strings.xml (Czech)

* New translations strings.xml (Danish)

* New translations strings.xml (Greek)

* New translations strings.xml (Finnish)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Hungarian)

* New translations strings.xml (Italian)

* New translations strings.xml (Japanese)

* New translations strings.xml (Korean)

* New translations strings.xml (Dutch)

* New translations strings.xml (Norwegian)

* New translations strings.xml (Polish)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Serbian (Cyrillic))

* New translations strings.xml (Swedish)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (English)

* New translations strings.xml (Galician)

* New translations strings.xml (Odia)

* New translations strings.xml (Italian)

* New translations strings.xml (Italian)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (German)

* New translations strings.xml (Russian)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Romanian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Arabic)

* New translati

--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -106,6 +106,20 @@
     <string name="video">Video</string>
     <string name="picker_subtitle">Esta aplicación solo puede acceder a las fotos que selecciones</string>
     <string name="close">Cerrar</string>
+    <string name="manage_media_title">Allow Gallery to Manage your Media</string>
+    <string name="manage_media_summary">This setting just skips any extra confirmation dialogs while performing various actions like marking as favorite.</string>
+    <string name="skip">Skip</string>
+    <string name="allow">Allow</string>
+    <string name="all">All</string>
+    <string name="secure_mode_title">Secure Mode</string>
+    <string name="secure_mode_summary">Hide the app preview when you exit it</string>
+    <string name="rotate_screen_cd">Rotate Screen</string>
+    <string name="size_dp">%1$sdp</string>
+    <string name="change_album_size">Change Album Card Size</string>
+    <string name="reset">Reset</string>
+    <string name="customization">Customization</string>
+    <string name="album_card_size_title">Album Card Size</string>
+    <string name="album_card_size_summary">Manually pick your album card size</string>
     <plurals name="item_count">
         <item quantity="one">%s Ítem</item>
         <item quantity="other">%s Ítems</item>
