--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -106,6 +106,20 @@
     <string name="video">Video</string>
     <string name="picker_subtitle">Questa app può accedere solo alle foto che selezioni</string>
     <string name="close">Chiudi</string>
+    <string name="manage_media_title">Autorizza Galleria a gestire i contenuti multimediali</string>
+    <string name="manage_media_summary">Questa impostazione consente di saltare le finestre di conferma supplementari durante l\'esecuzione di varie azioni, come la marcatura come preferito.</string>
+    <string name="skip">Salta</string>
+    <string name="allow">Consenti</string>
+    <string name="all">Tutto</string>
+    <string name="secure_mode_title">Modalità sicura</string>
+    <string name="secure_mode_summary">Nascondi l\'anteprima dell\'app quando esci</string>
+    <string name="rotate_screen_cd">Rotate Screen</string>
+    <string name="size_dp">%1$sdp</string>
+    <string name="change_album_size">Change Album Card Size</string>
+    <string name="reset">Reset</string>
+    <string name="customization">Customization</string>
+    <string name="album_card_size_title">Album Card Size</string>
+    <string name="album_card_size_summary">Manually pick your album card size</string>
     <plurals name="item_count">
         <item quantity="one">%s elemento</item>
         <item quantity="other">%s elementi</item>
