--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -97,15 +97,29 @@
     <string name="selection_dialog_close_cd">Auswahldialog schließen</string>
     <string name="edit">Bearbeiten</string>
     <string name="trash_deletion_warning">Gelöschte Fotos und Videos werden nach 30 Tagen entfernt.</string>
-    <string name="open_with">Open with</string>
-    <string name="select">Select</string>
-    <string name="photos_and_videos">Photos and Videos</string>
-    <string name="photos">Photos</string>
+    <string name="open_with">Öffnen mit</string>
+    <string name="select">Auswählen</string>
+    <string name="photos_and_videos">Fotos und Videos</string>
+    <string name="photos">Fotos</string>
     <string name="videos">Videos</string>
-    <string name="photo">Photo</string>
+    <string name="photo">Foto</string>
     <string name="video">Video</string>
-    <string name="picker_subtitle">This app can only access the photos you select</string>
-    <string name="close">Close</string>
+    <string name="picker_subtitle">Diese App kann nur auf die von Ihnen ausgewählten Fotos zugreifen</string>
+    <string name="close">Schließen</string>
+    <string name="manage_media_title">Der Galerie erlauben, Ihre Medien zu verwalten</string>
+    <string name="manage_media_summary">Diese Einstellung überspringt einfach alle zusätzlichen Bestätigungsdialoge bei der Durchführung verschiedener Aktionen wie dem Markieren als Favorit.</string>
+    <string name="skip">Überspringen</string>
+    <string name="allow">Erlauben</string>
+    <string name="all">Alle</string>
+    <string name="secure_mode_title">Sicherer Modus</string>
+    <string name="secure_mode_summary">Ausblenden der Anwendungsvorschau beim Beenden der Anwendung</string>
+    <string name="rotate_screen_cd">Rotate Screen</string>
+    <string name="size_dp">%1$sdp</string>
+    <string name="change_album_size">Change Album Card Size</string>
+    <string name="reset">Reset</string>
+    <string name="customization">Customization</string>
+    <string name="album_card_size_title">Album Card Size</string>
+    <string name="album_card_size_summary">Manually pick your album card size</string>
     <plurals name="item_count">
         <item quantity="one">%s Datei</item>
         <item quantity="other">%s Dateien</item>
