--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -106,6 +106,20 @@
     <string name="video">影片</string>
     <string name="picker_subtitle">這個應用程式只能存取您所選擇的相片</string>
     <string name="close">關閉</string>
+    <string name="manage_media_title">Allow Gallery to Manage your Media</string>
+    <string name="manage_media_summary">This setting just skips any extra confirmation dialogs while performing various actions like marking as favorite.</string>
+    <string name="skip">Skip</string>
+    <string name="allow">Allow</string>
+    <string name="all">All</string>
+    <string name="secure_mode_title">Secure Mode</string>
+    <string name="secure_mode_summary">Hide the app preview when you exit it</string>
+    <string name="rotate_screen_cd">Rotate Screen</string>
+    <string name="size_dp">%1$sdp</string>
+    <string name="change_album_size">Change Album Card Size</string>
+    <string name="reset">Reset</string>
+    <string name="customization">Customization</string>
+    <string name="album_card_size_title">Album Card Size</string>
+    <string name="album_card_size_summary">Manually pick your album card size</string>
     <plurals name="item_count">
         <item quantity="other">%s 個項目</item>
     </plurals>
